adding to the package from labs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,9 @@ export(mychisim)
 export(mycltp)
 export(myf)
 export(myncurve)
+export(myread)
 export(neg.bi.nom)
 export(ntickets)
 export(pareto)
+export(scatterhist)
 export(z.score)
