--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,5 +15,6 @@ export(myread)
 export(neg.bi.nom)
 export(ntickets)
 export(pareto)
+export(rand.data.select)
 export(scatterhist)
 export(z.score)
